[package]
name = "lazyproxy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/losfair/lazyproxy"
description = "A TCP proxy that is so lazy that shuts down itself after a period of inactivity."
authors = ["Heyang Zhou <heyang.zhou@icloud.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
futures = "0.3.24"
structopt = "0.3.26"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "json"] }
